Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111846

MQTT Subscriptions Example Crashes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.2.8, 6.5.1, 6.6.0
    • 6.6
    • MQTT
    • None
    • Windows
    • c04b21a2d (dev), 14f5e4c56 (6.5), dc16efb93 (6.4), 851020a1f (tqtc/lts-6.2)

    Description

      https://doc.qt.io/qt-6/qtmqtt-subscriptions-example.html

      Connect to a broker (like test.mosquitto.org)
      Press quit

      The application does not crash if it is disconnected first.

      The same behavior can be observed with the simple client example as well (https://doc.qt.io/qt-6/qtmqtt-simpleclient-example.html), the root cause is probably similar.

      Attachments

        For Gerrit Dashboard: QTBUG-111846
        # Subject Branch Project Status CR V

        Activity

          People

            mkalinow Maurice Kalinowski
            mate Máté Barany
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes