src/mqtt/qmqttconnection_p.h
@@ -38,7 +38,8 @@ public:
         BrokerDisconnected = 0,
         BrokerConnecting,
         BrokerWaitForConnectAck,
-        BrokerConnected
+        BrokerConnected,
+        ClientDestruction
     };
 
     explicit QMqttConnection(QObject *parent = nullptr);
@@ -67,6 +68,7 @@ public:
 
     inline quint16 unusedPacketIdentifier() const;
     inline InternalConnectionState internalState() const { return m_internalState; }
+    inline void setClientDestruction() { m_internalState = ClientDestruction; }
 
     void cleanSubscriptions();
 
